force-app/main/default/objects/Session_Report__c/Session_Report__c.object-meta.xml
<CustomObject>
    <label>Session Report</label>
    <nameField>
        <label>Session Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>