force-app/main/default/objects/Session_Report__c/fields/Activities_Hosted_or_Participated__c.field-meta.xml
<CustomField>
    <fullName>Activities_Hosted_or_Participated__c</fullName>
    <label>Activities Hosted or Participated</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>