force-app/main/default/objects/Session_Report__c/fields/Additional_Community_Partners_Recruited__c.field-meta.xml
<CustomField>
    <fullName>Additional_Community_Partners_Recruited__c</fullName>
    <label>Additional Community Partners Recruited</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>