force-app/main/default/objects/Session_Report__c/fields/Average_Club_Wide_Participation__c.field-meta.xml
<CustomField>
    <fullName>Average_Club_Wide_Participation__c</fullName>
    <label>Average Club-Wide Participation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>