force-app/main/default/objects/Session_Report__c/fields/Community_Health_Partner_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Community_Health_Partner_Involvement__c</fullName>
    <label>Community Health Partner Involvement</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>