force-app/main/default/objects/Session_Report__c/fields/Community_Health_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Health_Partner_Name__c</fullName>
    <label>Community Health Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>