force-app/main/default/objects/Session_Report__c/fields/Date_Club_Put_on_Funding_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Club_Put_on_Funding_Hold__c</fullName>
    <label>Date Club Put on Funding Hold</label>
    <type>Date</type>
</CustomField>