force-app/main/default/objects/Session_Report__c/fields/Date_Club_Put_on_Provisional_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Club_Put_on_Provisional_Status__c</fullName>
    <label>Date Club Put on Provisional Status</label>
    <type>Date</type>
</CustomField>