force-app/main/default/objects/Session_Report__c/fields/Describe_Program_Successes__c.field-meta.xml
<CustomField>
    <fullName>Describe_Program_Successes__c</fullName>
    <label>Describe Program Successes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>