force-app/main/default/objects/Session_Report__c/fields/Did_Club_Receive_a_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Did_Club_Receive_a_Site_Visit__c</fullName>
    <label>Did Club Receive a Site Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>