force-app/main/default/objects/Session_Report__c/fields/Explain_On_Track_to_Spend_Grant_DollarS__c.field-meta.xml
<CustomField>
    <fullName>Explain_On_Track_to_Spend_Grant_DollarS__c</fullName>
    <label>Explain On Track to Spend Grant DollarS</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>