force-app/main/default/objects/Session_Report__c/fields/Feedback_on_Program_Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on_Program_Curriculum__c</fullName>
    <label>Feedback on Program Curriculum</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>