force-app/main/default/objects/Session_Report__c/fields/Final_Session_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Session_Implementation_Date__c</fullName>
    <label>Final Session Implementation Date</label>
    <type>Date</type>
</CustomField>