force-app/main/default/objects/Session_Report__c/fields/Has_Signed_Memorandum_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Signed_Memorandum_of_Agreement__c</fullName>
    <label>Has Signed Memorandum of Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>