force-app/main/default/objects/Session_Report__c/fields/Healthy_Snack_Preparation_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Snack_Preparation_Implemented__c</fullName>
    <label>Healthy Snack Preparation Implemented</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>