force-app/main/default/objects/Session_Report__c/fields/How_Community_Partners_Recruited__c.field-meta.xml
<CustomField>
    <fullName>How_Community_Partners_Recruited__c</fullName>
    <label>How Community Partners Recruited</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>