force-app/main/default/objects/Session_Report__c/fields/How_Community_Service_Project_Supports__c.field-meta.xml
<CustomField>
    <fullName>How_Community_Service_Project_Supports__c</fullName>
    <label>How Community Service Project Supports</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>