force-app/main/default/objects/Session_Report__c/fields/How_Curriculum_was_Adapted__c.field-meta.xml
<CustomField>
    <fullName>How_Curriculum_was_Adapted__c</fullName>
    <label>How Curriculum was Adapted</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>