force-app/main/default/objects/Session_Report__c/fields/How_Healthy_Food_Choices_Implemented__c.field-meta.xml
<CustomField>
    <fullName>How_Healthy_Food_Choices_Implemented__c</fullName>
    <label>How Healthy Food Choices Implemented</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>