force-app/main/default/objects/Session_Report__c/fields/How_Parents_Guardians_Recruited__c.field-meta.xml
<CustomField>
    <fullName>How_Parents_Guardians_Recruited__c</fullName>
    <label>How Parents/Guardians Recruited</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>