force-app/main/default/objects/Session_Report__c/fields/How_Program_Integrated_into_Activites__c.field-meta.xml
<CustomField>
    <fullName>How_Program_Integrated_into_Activites__c</fullName>
    <label>How Program Integrated into Activites</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>