force-app/main/default/objects/Session_Report__c/fields/How_Remove_Club_from_Provisional_Status__c.field-meta.xml
<CustomField>
    <fullName>How_Remove_Club_from_Provisional_Status__c</fullName>
    <label>How Remove Club from Provisional Status</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>