force-app/main/default/objects/Session_Report__c/fields/Innovative_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Innovative_Accomplishments__c</fullName>
    <label>Innovative Accomplishments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>