force-app/main/default/objects/Session_Report__c/fields/Link_to_Report_Photos__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Report_Photos__c</fullName>
    <label>Link to Report Photos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>