force-app/main/default/objects/Session_Report__c/fields/Local_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Id__c</fullName>
    <formula>CASESAFEID( Site__r.Local_Organization__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Id</label>
    <type>Text</type>
</CustomField>