force-app/main/default/objects/Session_Report__c/fields/National_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Name__c</fullName>
    <formula>Site__r.National_Organization_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Organization Name</label>
    <type>Text</type>
</CustomField>