force-app/main/default/objects/Session_Report__c/fields/Next_Program_Year_Plans__c.field-meta.xml
<CustomField>
    <fullName>Next_Program_Year_Plans__c</fullName>
    <label>Next Program Year Plans</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>