force-app/main/default/objects/Session_Report__c/fields/Number_of_Physical_Activity_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Physical_Activity_Challenges__c</fullName>
    <label>Number of Physical Activity Challenges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>