force-app/main/default/objects/Session_Report__c/fields/Number_of_Sessions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions_Completed__c</fullName>
    <label>Number of Sessions Completed</label>
    <type>TextArea</type>
</CustomField>