force-app/main/default/objects/Session_Report__c/fields/Number_of_Youth_in_Addition_to_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Youth_in_Addition_to_Required__c</fullName>
    <label>Number of Youth in Addition to Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>