force-app/main/default/objects/Session_Report__c/fields/Number_of_Youth_Never_Participated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Youth_Never_Participated__c</fullName>
    <label>Number of Youth Never Participated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>