force-app/main/default/objects/Session_Report__c/fields/Number_Participants_Completed_Post_Test__c.field-meta.xml
<CustomField>
    <fullName>Number_Participants_Completed_Post_Test__c</fullName>
    <label>Number Participants Completed Post-Test</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>