force-app/main/default/objects/Session_Report__c/fields/On_Task_Submitting_Program_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>On_Task_Submitting_Program_Reimbursement__c</fullName>
    <label>On Task Submitting Program Reimbursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>