force-app/main/default/objects/Session_Report__c/fields/On_Track_to_Spend_Grant_Dollars__c.field-meta.xml
<CustomField>
    <fullName>On_Track_to_Spend_Grant_Dollars__c</fullName>
    <label>On Track to Spend Grant Dollars</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>