force-app/main/default/objects/Session_Report__c/fields/Parents_Guardians_Recruited_to_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Parents_Guardians_Recruited_to_Volunteer__c</fullName>
    <label>Parents/Guardians Recruited to Volunteer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>