force-app/main/default/objects/Session_Report__c/fields/Participants_Completed_Pre_Test__c.field-meta.xml
<CustomField>
    <fullName>Participants_Completed_Pre_Test__c</fullName>
    <label>Participants Completed Pre-Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>