force-app/main/default/objects/Session_Report__c/fields/Participate_in_Bi_Monthly_Conference__c.field-meta.xml
<CustomField>
    <fullName>Participate_in_Bi_Monthly_Conference__c</fullName>
    <label>Participate in Bi-Monthly Conference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>