force-app/main/default/objects/Session_Report__c/fields/Plans_for_Continuing_Program__c.field-meta.xml
<CustomField>
    <fullName>Plans_for_Continuing_Program__c</fullName>
    <label>Plans for Continuing Program</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>