force-app/main/default/objects/Session_Report__c/fields/Plans_for_Reaching_144_Students__c.field-meta.xml
<CustomField>
    <fullName>Plans_for_Reaching_144_Students__c</fullName>
    <label>Plans for Reaching 144 Students</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>