force-app/main/default/objects/Session_Report__c/fields/Program_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Program_Accomplishments__c</fullName>
    <label>Program Accomplishments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>