force-app/main/default/objects/Session_Report__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>Site__r.National_Organization__r.Program_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>