force-app/main/default/objects/Session_Report__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <label>Reporting Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2017-2018 Q1</fullName>
            </value>
            <value>
                <fullName>2017-2018 Q2</fullName>
            </value>
            <value>
                <fullName>2017-2018 Q3</fullName>
            </value>
            <value>
                <fullName>2017-2018 Q4</fullName>
            </value>
            <value>
                <fullName>2017 Q4</fullName>
            </value>
            <value>
                <fullName>2018-2019 Q1</fullName>
            </value>
            <value>
                <fullName>2018-2019 Q2</fullName>
            </value>
            <value>
                <fullName>2018-2019 Q3</fullName>
            </value>
            <value>
                <fullName>2018-2019 Q4</fullName>
            </value>
            <value>
                <fullName>2018 Q1</fullName>
            </value>
            <value>
                <fullName>2018 Q2</fullName>
            </value>
            <value>
                <fullName>2018 Q3</fullName>
            </value>
            <value>
                <fullName>2018 Q4</fullName>
            </value>
            <value>
                <fullName>2019-2020 Q1</fullName>
            </value>
            <value>
                <fullName>2019-2020 Q2</fullName>
            </value>
            <value>
                <fullName>2019-2020 Q3</fullName>
            </value>
            <value>
                <fullName>2019-2020 Q4</fullName>
            </value>
            <value>
                <fullName>2019 Q1</fullName>
            </value>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>