force-app/main/default/objects/Session_Report__c/fields/Serving_More_Youth_Than_Required__c.field-meta.xml
<CustomField>
    <fullName>Serving_More_Youth_Than_Required__c</fullName>
    <label>Serving More Youth Than Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Currently Implementing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>