force-app/main/default/objects/Session_Report__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reports</relationshipLabel>
    <relationshipName>Session_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>