force-app/main/default/objects/Session_Report__c/fields/Status_of_Community_Service_Project_Plan__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Community_Service_Project_Plan__c</fullName>
    <label>Status of Community Service Project Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>