force-app/main/default/objects/Session_Report__c/fields/Type_Activities_Guardians_Participated__c.field-meta.xml
<CustomField>
    <fullName>Type_Activities_Guardians_Participated__c</fullName>
    <label>Type Activities Guardians Participated</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>