force-app/main/default/objects/Session_Report__c/fields/Type_of_Club_Wide_Physical_Activit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Club_Wide_Physical_Activit__c</fullName>
    <label>Type of Club-Wide Physical Activit</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>