force-app/main/default/objects/Session_Report__c/fields/Type_of_Support_From_Community_Partners__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Support_From_Community_Partners__c</fullName>
    <label>Type of Support From Community Partners</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>