force-app/main/default/objects/Session_Report__c/fields/Type_of_Volunteer_Activities__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Volunteer_Activities__c</fullName>
    <label>Type of Volunteer Activities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>