force-app/main/default/objects/Session_Report__c/fields/Was_Club_Put_on_Provisional_Status__c.field-meta.xml
<CustomField>
    <fullName>Was_Club_Put_on_Provisional_Status__c</fullName>
    <label>Was Club Put on Provisional Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>