force-app/main/default/objects/Session_Report__c/fields/What_are_People_Saying_About_Program__c.field-meta.xml
<CustomField>
    <fullName>What_are_People_Saying_About_Program__c</fullName>
    <label>What are People Saying About Program</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>