force-app/main/default/objects/Session_Report__c/fields/Which_Physical_Activity_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Which_Physical_Activity_Challenges__c</fullName>
    <label>Which Physical Activity Challenges</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>