force-app/main/default/objects/Session_Report__c/fields/Why_Club_Put_on_Funding_Hold__c.field-meta.xml
<CustomField>
    <fullName>Why_Club_Put_on_Funding_Hold__c</fullName>
    <label>Why Club Put on Funding Hold</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>