force-app/main/default/objects/Session_Report__c/fields/Youth_Participated_in_Physical_Activity__c.field-meta.xml
<CustomField>
    <fullName>Youth_Participated_in_Physical_Activity__c</fullName>
    <label>Youth Participated in Physical Activity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>