force-app/main/default/objects/Session_Report__c/recordTypes/Progress_Report.recordType-meta.xml
<RecordType>
    <fullName>Progress_Report</fullName>
    <active>true</active>
    <label>Progress Report</label>
</RecordType>