force-app/main/default/objects/Session_Report__c/recordTypes/Session_Report.recordType-meta.xml
<RecordType>
    <fullName>Session_Report</fullName>
    <active>true</active>
    <label>Session Report</label>
</RecordType>