force-app/main/default/objects/Session_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Local_Organization_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>