force-app/main/default/objects/Session_Report__c/listViews/LEGO_Session_Reports.listView-meta.xml
<ListView>
    <fullName>LEGO_Session_Reports</fullName>
    <columns>NAME</columns>
    <columns>Session__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>,Session_Report__c.Session_Report</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>LEGO</value>
    </filters>
    <label>LEGO Session Reports</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>