force-app/main/default/objects/Session_Report__c/listViews/TRAIL_Progress_Reports.listView-meta.xml
<ListView>
    <fullName>TRAIL_Progress_Reports</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>Reporting_Period__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Session_Report__c.Progress_Report</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>TRAIL</value>
    </filters>
    <label>TRAIL Progress Reports</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>